Update runcommand.md